dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,8 @@ html,
 body {
   overflow-x: hidden;
   width: 100%;
+  background-color: var(--background);
+  color: var(--foreground);
 }
 
 :root {
